<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color"
    tools:context=".activity.PaymentActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparent_color">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:paddingLeft="12dp"
            android:src="@drawable/ic_back_baseline_arrow"
            app:tint="@color/white_color" />

        <com.example.tattomobile.utility.PoppinBoldTextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/ib_back"
            android:text="Payment"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black_color"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.tattomobile.utility.PoppinBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Payment Detail"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.tattomobile.utility.PoppinRegularTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/tv_name"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ractangulor_edittext"
                    android:hint="Enter Name here..."
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.example.tattomobile.utility.PoppinRegularTextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/tv_email"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ractangulor_edittext"
                    android:hint="Enter Email here..."
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.example.tattomobile.utility.PoppinRegularTextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobile"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/tv_mobile"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ractangulor_edittext"
                    android:hint="Enter Mobile here..."
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkmoneyused"
                    android:layout_width="40dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_below="@id/et_mobile"
                    android:buttonTint="@color/yellow_color"
                    android:layout_marginTop="18dp"
                    android:padding="2dp" />

                <com.example.tattomobile.utility.PoppinRegularTextView
                    android:id="@+id/show_money_used"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/et_mobile"


                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_toRightOf="@+id/checkmoneyused"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="use your Earn  coin.../-"
                    android:textColor="@color/yellow_color"
                    android:textSize="12sp" />

            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/show_Moneytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_payment_text"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="1dp"
                android:text="@string/money_text"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_book_your_slot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:text="Pay 50/- To Confirm Your Slot"
                android:textAllCaps="false"
                android:textColor="@color/black_color"
                android:textStyle="bold" />

            <com.example.tattomobile.utility.PoppinRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Amount will be minus from total at shop after completion"
                android:textColor="@color/black_color"
                android:textSize="12sp" />

            <com.example.tattomobile.utility.PoppinBoldTextView
              android:id="@+id/ortext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="OR"
android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow_color"
                android:text="Pay Full Amount 900/-"
                android:textAllCaps="false"
                android:textStyle="bold"
android:visibility="gone"
                android:textColor="@color/white_color" />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar_payment"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress_bg"
            android:layout_height="@dimen/dimen_50dp"/>

    </RelativeLayout>

</RelativeLayout>